--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row p-2">
-    <div class="col-auto" (click)="openSideNavList()">
+  <div class="row no-gutters p-1">
+    <div class="col-auto pt-2" (click)="openSideNavList()">
       <i class="far fa-filter"></i>
     </div>
     <div class="col-auto">
