--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
-  <div class="row no-gutters p-1">
-    <div class="col-auto pt-2" (click)="openSideNavList()">
+  <div class="row no-gutters p-2">
+    <div class="col-auto mr-3" (click)="openSideNavList()" matTooltip="Open conversation filter">
       <i class="far fa-filter"></i>
     </div>
-    <div class="col-auto">
-      <a class="nav-link" href="#" [routerLink]="['conversations']" routerLinkActive="active">CONVERSATIONS</a>
+    <div class="col-auto mr-3">
+      <a class="nav-link p-0" href="#" [routerLink]="['conversations']" routerLinkActive="active">CONVERSATIONS</a>
     </div>
     <div class="col-auto">
-      <a class="nav-link" href="#" [routerLink]="['assessments']" routerLinkActive="active">ASSESSMENTS</a>
+      <a class="nav-link p-0" href="#" [routerLink]="['assessments']" routerLinkActive="active">ASSESSMENTS</a>
     </div>
   </div>
 </div>
