--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@
 .fa-chevron-right:hover,
 .fa-download:hover,
 .fa-plus-circle:hover,
-.fa-minus-circle:hover {
+.fa-minus-circle:hover,
+.fa-times:hover {
   color: #b6b6b6;
   cursor: pointer;
 }
@@ -83,6 +84,11 @@
 /* drop downs */
 .dropdown-item > a {
   color: #5d5e60;
+}
+
+/* material */
+.mat-dialog-container {
+  padding: 12px!important;
 }
 
 /*
