style(NoResultsComponent): font

--- a/src/app/shared/components/no-results/no-results.component.html
+++ b/src/app/shared/components/no-results/no-results.component.html
@@ -5,8 +5,8 @@
           <div class="row justify-content-center">
             <div class="col-auto mt-2 pt-3">
               <img src="./assets/empty_state.png" alt=""><br><br>
-              <span class="no-results-primary">{{messagePrimary}}</span><br>
-              <span class="no-results-secondary">{{messageSecondary}}</span>
+              <span class="font-secondary">{{messagePrimary}}</span><br>
+              <span class="font-secondary">{{messageSecondary}}</span>
             </div>
           </div>
         </div>
