--- a/src/app/main/assessments/assessments.component.html
+++ b/src/app/main/assessments/assessments.component.html
@@ -2,7 +2,7 @@
   <div class="row no-gutters mt-2">
     <div class="col-12 col-md-6 pr-2">
       <div class="row no-gutters">
-        <app-assessments-grid [data]="(assessments$ | async)" [type]="'playlists'"></app-assessments-grid>
+        <app-assessments-grid [data]="(playlists$ | async)" [type]="'playlists'"></app-assessments-grid>
       </div>
     </div>
 
