feat(store): improve store selection and conversation/assessment cycling

--- a/src/app/shared/components/assessment-save/assessment-save.component.html
+++ b/src/app/shared/components/assessment-save/assessment-save.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="updating !== null" class="row mt-2">
+<div *ngIf="updating !== null" class="row">
   <div [ngSwitch]="updating" class="font-secondary col">
     <span *ngSwitchCase="false">
       <i style="color: green" class="far fa-check" aria-hidden="true"></i> Saved</span>
