--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
 @import './styles/ngx-datatable.css';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+body {
+  background-color: #e8e8e8;
+}
+
 /* font-awesome */
 .fa-chevron-left,
 .fa-chevron-right,
