--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row no-gutters p-2">
-    <div class="col-auto mr-3" (click)="openSideNavList()" matTooltip="Open conversation filter">
+    <div class="col-auto mr-3" (click)="toggleSideNavList()" matTooltip="Open conversation filter">
       <i class="far fa-filter"></i>
     </div>
     <div class="col-auto mr-3">
