--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,7 +6,8 @@
   <router-outlet></router-outlet>
 
   <mat-sidenav mode="push" position="start" #sideNavList>
-    <app-conversations-list [playlists]="(playlists$ | async)" [playlistSelect]="(playlistSelect$ | async)" [sideNavList]="sideNavList" [conversations]="(conversations$ | async)" [conversationState]="(conversationState$ | async)"></app-conversations-list>
+    <app-conversations-list [playlistState]="(playlistState$ | async)" [playlists]="(playlists$ | async)" [playlistSelect]="(playlistSelect$ | async)"
+      [sideNavList]="sideNavList" [conversations]="(conversations$ | async)" [conversationState]="(conversationState$ | async)"></app-conversations-list>
   </mat-sidenav>
 
 </mat-sidenav-container>
