--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
 }
 
 /* font-awesome */
+.fa-play-circle,
 .fa-chevron-up,
 .fa-chevron-down,
 .fa-chevron-left,
@@ -18,6 +19,7 @@ body {
   color: #b6b6b6;
   cursor: pointer;
 }
+.fa-play-circle:hover,
 .fa-chevron-up:hover,
 .fa-chevron-down:hover,
 .fa-chevron-left:hover,
