--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row no-gutters p-2">
-    <div class="col-auto mr-3" (click)="toggleSideNavList()" matTooltip="Open conversation filter">
+    <div class="col-auto mr-3" (click)="toggleSideNavList()" matTooltip="Open conversation filter" matTooltipPosition="right">
       <i class="far fa-filter"></i>
     </div>
     <div class="col-auto mr-3">
@@ -8,6 +8,9 @@
     </div>
     <div class="col-auto">
       <a class="nav-link p-0" href="#" [routerLink]="['assessments']" routerLinkActive="active">ASSESSMENTS</a>
+    </div>
+    <div class="col text-right font-secondary">
+      <small>{{time | date:'short'}}</small>
     </div>
   </div>
 </div>
