--- a/src/app/shared/components/assessment-control/assessment-control.component.html
+++ b/src/app/shared/components/assessment-control/assessment-control.component.html
@@ -1,8 +1,8 @@
 <div class="row no-gutters">
-  <div class="col-auto mr-2" (click)="createAssessment()" matTooltip="New assessment">
+  <div class="col-auto mr-2" (click)="createAssessment()" matTooltip="New assessment" matTooltipClass="material-tooltip">
     <i class="far fa-plus-circle"></i>
   </div>
-  <div class="col-auto" (click)="deleteAssessment()" matTooltip="Delete assessment">
+  <div class="col-auto" (click)="deleteAssessment()" matTooltip="Delete assessment" matTooltipClass="material-tooltip">
     <i class="far fa-minus-circle"></i>
   </div>
 </div>
