--- a/src/app/shared/components/assessment-control/assessment-control.component.html
+++ b/src/app/shared/components/assessment-control/assessment-control.component.html
@@ -2,7 +2,10 @@
   <div class="col-auto mr-2" (click)="createAssessment()" matTooltip="New assessment" matTooltipClass="material-tooltip">
     <i class="far fa-plus-circle"></i>
   </div>
-  <div class="col-auto" (click)="deleteAssessment()" matTooltip="Delete assessment" matTooltipClass="material-tooltip">
+  <div *ngIf="!confirm" class="col-auto" (click)="confirm = true" matTooltip="Delete assessment" matTooltipClass="material-tooltip">
     <i class="far fa-minus-circle"></i>
+  </div>
+  <div *ngIf="confirm" class="col-auto" (mouseout)="confirm = false" (click)="deleteAssessment()" matTooltip="Delete assessment" matTooltipClass="material-tooltip">
+    <button class="btn btn-sm btn-danger py-0">Really delete?</button>
   </div>
 </div>
