feat(AssessmentsStats): structure for assessment statistics panel

--- a/src/app/main/assessments/assessments-grid/assessments-grid.component.html
+++ b/src/app/main/assessments/assessments-grid/assessments-grid.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- no conversation message -->
-    <app-no-results [results]="rows.length > 0" [messagePrimary]="'No '+type+' found'" [messageSecondary]="'Try to broaden your search'"></app-no-results>
+    <app-no-results [results]="rows.length > 0" [messageSecondary]="'No '+type+' found'"></app-no-results>
 
   </div>
 </div>
