--- a/src/app/main/assessments/assessments.component.html
+++ b/src/app/main/assessments/assessments.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
+  <div class="row mt-2">
+    <app-assessments-stats></app-assessments-stats>
+  </div>
   <div class="row no-gutters mt-2">
     <div class="col-12 col-md-6 pr-2">
       <div class="row no-gutters">
