--- a/src/app/main/assessments/assessments.component.html
+++ b/src/app/main/assessments/assessments.component.html
@@ -1,17 +1,17 @@
 <div class="container-fluid">
   <div class="row mt-2">
-    <app-assessments-stats></app-assessments-stats>
+    <app-assessments-stats [stats]="(stats$ | async)" [apiLogin]="(apiLogin$ | async)"></app-assessments-stats>
   </div>
   <div class="row no-gutters mt-2">
     <div class="col-12 col-md-6 pr-2">
       <div class="row no-gutters">
-        <app-assessments-grid [data]="(playlists$ | async)" [type]="'playlists'"></app-assessments-grid>
+        <app-assessments-grid [stats]="(stats$ | async)" [dataState]="(playlistState$ | async)" [data]="(playlists$ | async)" [type]="'playlists'"></app-assessments-grid>
       </div>
     </div>
 
     <div class="col-12 col-md-6">
       <div class="row no-gutters">
-        <app-assessments-grid [data]="(assessments$ | async)" [type]="'assessments'"></app-assessments-grid>
+        <app-assessments-grid [stats]="(stats$ | async)" [dataState]="(assessmentState$ | async)" [data]="(assessments$ | async)" [type]="'assessments'"></app-assessments-grid>
       </div>
     </div>
   </div>
