--- a/src/app/main/assessments/assessments.component.html
+++ b/src/app/main/assessments/assessments.component.html
@@ -3,13 +3,13 @@
     <app-assessments-stats [stats]="(stats$ | async)" [apiLogin]="(apiLogin$ | async)"></app-assessments-stats>
   </div>
   <div class="row no-gutters mt-2">
-    <div class="col-12 col-md-6 pr-2">
+    <div class="col-12 col-md-5 pr-md-2">
       <div class="row no-gutters">
         <app-assessments-grid [stats]="(stats$ | async)" [dataState]="(playlistState$ | async)" [data]="(playlists$ | async)" [type]="'playlists'"></app-assessments-grid>
       </div>
     </div>
 
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-md-7 mt-2 mt-md-0">
       <div class="row no-gutters">
         <app-assessments-grid [stats]="(stats$ | async)" [dataState]="(assessmentState$ | async)" [data]="(assessments$ | async)" [type]="'assessments'"></app-assessments-grid>
       </div>
