feat(chat): chat data added and data model modified

--- a/src/app/shared/components/message-by/message-by.component.html
+++ b/src/app/shared/components/message-by/message-by.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters font-by" [ngClass]="by === 'Consumer' ? 'consumer' : 'agent'">
+<div class="row no-gutters font-by" [ngClass]="by">
   <div class="col-auto mr-2">
     {{time | date:'shortTime'}}
   </div>
