feat(AssessmentsGrid): search by name or id

--- a/src/app/main/assessments/assessments-grid/assessments-grid.component.css
+++ b/src/app/main/assessments/assessments-grid/assessments-grid.component.css
@@ -2,3 +2,8 @@
   overflow: auto;
   height: calc(100vh - 215px);
 }
+
+.mat-form-field {
+  font-family: MyriadPro, 'sans-serif';
+  font-size: 14px;
+}
