--- a/src/app/main/assessments/assessments-grid/assessments-grid.component.html
+++ b/src/app/main/assessments/assessments-grid/assessments-grid.component.html
@@ -1,8 +1,19 @@
 <div class="card" id="grid-container">
-  <div class="card-body">
-    <h5 class="card-title">{{type}}
-      <span class="text-muted">({{rows.length | number:'1.0-0'}})</span>
-    </h5>
+  <div class="card-body pt-2">
+
+    <div class="row justify-content-between">
+      <h5 class="col-auto card-title pt-3">{{setTitle()}}
+        <span class="text-muted">({{rows.length | number:'1.0-0'}})</span>
+      </h5>
+      <div class="col-auto">
+        <mat-form-field class="example-form-field">
+          <input matInput type="text" [placeholder]="getSearchPlaceholder()" [(ngModel)]="search" (ngModelChange)="updateSearch()">
+          <button mat-button *ngIf="search" matSuffix mat-icon-button aria-label="Clear" (click)="updateSearch(true)">
+            x
+          </button>
+        </mat-form-field>
+      </div>
+    </div>
 
     <!-- conversation grid -->
     <div *ngIf="rows.length" class="row mt-2">
