--- a/src/styles.css
+++ b/src/styles.css
@@ -148,6 +148,20 @@ body {
   white-space: nowrap;
   vertical-align: middle;
 }
+.input-group-btn > .btn-secondary {
+  padding: 0.5rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #464a4c;
+  text-align: center;
+  background-color: #eceeef;
+  border-radius: 0.15rem;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  white-space: nowrap;
+  vertical-align: middle;
+}
 
 /***********************/
 /* FILTERS & DROPDOWNS */
