--- a/src/app/main/assessments/assessments-stats/assessments-stats.component.html
+++ b/src/app/main/assessments/assessments-stats/assessments-stats.component.html
@@ -1,7 +1,6 @@
 <div class="card">
-  <div class="card-body">
-    <div class="row">
-      <div class="col">
+    <div class="row no-gutters">
+      <div class="col-auto p-3">
         <div class="row">
           <h5 class="col mb-0 card-title">Account</h5>
         </div>
@@ -9,21 +8,33 @@
           <h5 class="col mb-0 card-title text-muted">{{apiLogin.account}}</h5>
         </div>
       </div>
-      <div *ngFor="let metric of metrics" class="col">
+      <div *ngFor="let metric of metrics" class="col p-3">
         <div class="row">
           <h5 class="col mb-0 card-title">{{metric.name}}</h5>
         </div>
         <div class="row">
           <h5 class="col mb-0 card-title text-muted">
             <span *ngIf="metric.format === 'number'">
-                {{metric.value | number:'1.0-1'}}
+              {{metric.value | number:'1.0-1'}}
             </span>
             <span *ngIf="metric.format === 'percent'">
-                {{metric.value | percent}}
+              {{metric.value | percent}}
             </span>
           </h5>
         </div>
+
       </div>
-    </div>
+      <div *ngIf="secondary.length" class="col-auto p-1 mr-3">
+        <div *ngFor="let metric of secondary" class="row">
+          <small class="col text-nowrap text-truncate">
+            <span *ngIf="metric.format === 'number'" class="font-tertiary text-muted">
+              {{metric.value | number:'1.0-1'}}
+            </span>
+            <span *ngIf="metric.format === 'percent'" class="text-muted">
+              {{metric.value | percent}}
+            </span>
+            <span>{{metric.name}}</span>
+          </small>
+        </div>
+      </div>
   </div>
-</div>
