--- a/src/app/main/assessments/assessments-grid/assessments-grid.component.html
+++ b/src/app/main/assessments/assessments-grid/assessments-grid.component.html
@@ -6,12 +6,17 @@
         <span class="text-muted">({{rows.length | number:'1.0-0'}})</span>
       </h5>
       <div class="col-auto">
-        <mat-form-field class="example-form-field">
-          <input matInput type="text" placeholder="Filter" [(ngModel)]="search" (ngModelChange)="updateSearch()">
-          <button mat-button *ngIf="search" matSuffix mat-icon-button aria-label="Clear" (click)="updateSearch(true)">
-            x
-          </button>
-        </mat-form-field>
+        <div class="row">
+          <mat-form-field class="col-auto">
+            <input matInput type="text" placeholder="Filter" [(ngModel)]="search" (ngModelChange)="updateSearch()">
+            <button mat-button *ngIf="search" matSuffix mat-icon-button aria-label="Clear" (click)="updateSearch(true)">
+              x
+            </button>
+          </mat-form-field>
+          <div class="mt-3 col-auto" matTooltip="Export to XLSX" matTooltipClass="material-tooltip" (click)="downloadToExcel()">
+            <i class="far fa-download" aria-hidden="true"></i>
+          </div>
+        </div>
       </div>
     </div>
 
