chore(package): upgrade to angular 6

--- a/src/app/main/assessments/assessments-grid/assessments-grid.component.html
+++ b/src/app/main/assessments/assessments-grid/assessments-grid.component.html
@@ -48,7 +48,7 @@
 
 <!-- template for dates -->
 <ng-template #dateCell let-value="value">
-  {{ value | date:'short'}}
+  {{ value.toDate() | date:'short'}}
 </ng-template>
 
 <!-- cell for percents -->
