feat(StructuredContent): add rendered content to message view

--- a/src/styles.css
+++ b/src/styles.css
@@ -170,6 +170,14 @@ body {
   border-color: #ced4db;
 }
 
+
+/*************************/
+/* JSON POLLOCK OVERRIDE */
+/*************************/
+.lp-json-pollock .lp-json-pollock-layout {
+  max-width: none;
+}
+
 /***********************/
 /* FILTERS & DROPDOWNS */
 /***********************/
